# pwninit

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yml  deploy.yml
ci/: .travis.yml  before_deploy.sh  install.sh  script.sh
ci-trust/: .travis.yml
src/: cpu_arch.rs  fetch_ld.rs  lib.rs  libc_deb.rs  libc_version.rs  main.rs  opts.rs  patch_bin.rs  patchelf.rs  proc_vmlinux.rs  pwninit.rs  set_exec.rs  solve.py  solvepy.rs  template.py  unstrip_libc.rs  util.rs  warn.rs
src/elf/: build_id.rs  detect.rs  has_debug_syms.rs  mod.rs  parse.rs
