[package]
name = "pwninit"
version = "3.0.2"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"
description = "automate starting binary exploit challenges"
repository = "https://github.com/io12/pwninit"
readme = "README.md"
keywords = ["pwn", "init", "binary", "elf", "exploit"]
license = "MIT"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
twoway = "0.2.1"
structopt = "0.3.25"
goblin = "0.4.3"
ar = "0.9.0"
tar = "0.4.37"
rust-lzma = "0.5.1"
umask = "1.0.0"
is_executable = "1.0.1"
tempdir = "0.3.7"
colored = "2.0.0"
snafu = "0.6.10"
ex = "0.1.3"
derive_setters = "0.1.5"
strfmt = "0.1.6"
maplit = "1.0.2"
flate2 = "1.0.22"

[dependencies.reqwest]
version = "0.11.6"
features = ["blocking"]
